@@ -4,6 +4,7 @@ Version 3.0.0 - SVN
 -------------------
  - Fix specification of checktestdata script syntax.
  - Small bugfixes and improvements to checktestdata program.
+ - Fix error trapping in subshells, thanks Jan Jergus. (Closes: #2866430)
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
